# Eitri

./: .env.example  .gitignore  LICENSE.md  README.md  alembic.ini  pyproject.toml  requirements.txt
configs/: eitri.example.yaml
configs/experiments/: chest_xray_ct_24h.yaml
docs/: architecture.md  audit.md  control-plane.md  database.md  guardrails.md  metrics.md  modules.md  operational-verification.md  operations.md  plugins.md  roadmap.md  skadbladnir-contract.md  tui.md  tyr-integration.md  ui-mockups.md  workers.md  workflow.md
docs/evidence/: thor-worker-smoke-2026-06-27.jsonl  tyr-metastore-bootstrap-2026-06-27.md
migrations/: README.md  env.py
migrations/versions/: 0001_create_eitri_metastore.py
plugins/radiology_chest_xray_ct_24h/: plugin.toml
src/eitri/: __init__.py  audit.py  bootstrap.py  cli.py  config.py  database.py  datasets.py  db.py  domain.py  experiments.py  guardrails.py  jobs.py  metrics.py  mock.py  models.py  observability.py  ops.py  plugins.py  registry.py  schemas.py  sync.py  telemetry.py  tui.py  web.py  workers.py
src/eitri/templates/: control_plane.html
tests/: test_audit.py  test_cli.py  test_config.py  test_database.py  test_guardrails.py  test_migrations.py  test_mock.py  test_ops.py  test_plugins.py  test_registry.py  test_schemas.py  test_services.py  test_sync_workers.py  test_telemetry.py  test_web_contract.py  test_worker_executor.py
